--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
     "version": 2,
     "builds": [
         { "src": "*.html", "use": "@vercel/static" },
+        { "src": "*.css", "use": "@vercel/static" },
         { "src": "api/*.js", "use": "@vercel/node" }
     ],
     "routes": [
